Notmuch 0.23 (UNRELEASED)
=========================

Ruby Bindings
-------------

Add support for `notmuch_database_get_all_tags`

Notmuch 0.22.1 (2016-07-19)
===========================

Library
-------

Correct the definition of `LIBNOTMUCH_CHECK_VERSION`.

Document the (lack of) operations permitted on a closed database.

Test Suite
----------

Fix race condition in dump / restore tests.

Notmuch-Mutt
------------

Use `env` to locate perl.

Emacs
-----

Tell `message-mode` mode that outgoing messages are mail

  This makes message-mode configuration behave more predictably.

Respect charset of MIME parts when reading them

  Fix previous assumption that everyone uses UTF-8.

Notmuch 0.22 (2016-04-26)
=========================

General
-------

Xapian 1.3 support

  Notmuch should now build (and the test suite should pass) on recent
  releases of Xapian 1.3.x. It has been tested with Xapian 1.3.5.

Limited support for S/MIME messages

  Signature verification is supported, but not decryption. S/MIME
  signature creation and S/MIME encryption are supported via built-in
  support in Emacs. S/MIME support is not extensively tested at this
  time.

Bug Fixes

   Fix for threading bug involving deleting and re-adding
   messages. Fix for case-sensitive content disposition headers. Fix
   handling of 1 character directory names at top level.

Command Line Interface
----------------------

`notmuch show` now supports verifying S/MIME signatures

  This support relies on an appropriately configured `gpgsm`.

Build System
------------

Drop dependency on "pkg-config emacs".

Emacs Interface
---------------

Notmuch replies now include all parts shown in the show view

  There are two main user visible changes. The first is that rfc822
  parts are now included in replies.

  The second change is that part headers are now included in the reply
  buffer to provide visible separation of the parts. The choice of
  which part headers to show is customizable via the variable