@@ -1,6 +1,16 @@
 Notmuch 0.23 (UNRELEASED)
 =========================
 
+Emacs
+-----
+
+Face customization is easier
+
+  New faces `notmuch-search-flagged-face` and
+  `notmuch-search-unread-face` are used by default by
+  `notmuch-search-line-faces`. Customize `notmuch-faces` to modify
+  them.
+
 Ruby Bindings
 -------------
 
